base/app/podinfo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
  namespace: pod-info
spec:
  type: NodePort
  selector:
    app: podinfo
  ports:
    - name: http
      port: 9898
      protocol: TCP
